...
import { RefreshControl } from 'react-native';
import { useRemoteConfig } from './hook';

export default function RemoteConfig() {
  const { config, refreshing, navigation, onRefresh, fetchRemoteData } = useRemoteConfig();
  return (
    <Box style={{ flex: 1 }} testID="remote-config-screen">
      <Heading fontSize="xl" p="4" pb="3">
        Remote Config
      </Heading>
      <FlatList
        data={config}
        refreshControl={<RefreshControl refreshing={refreshing} onRefresh={onRefresh} />}
...
        )}
        keyExtractor={(item) => item.key as string}
      />
      <Button style={{ marginHorizontal: 20 }} onPress={fetchRemoteData}>
        Fetch
      </Button>
      <Button style={{ margin: 20 }} onPress={() => navigation.goBack()} testID="btn-back">
        Back
      </Button>
    </Box>
  );
}

