...
 * @references https://firebase.google.com/docs/ab-testing/abtest-config
 */
export default function ABTest1() {
  const { experiment, color, navigation, variant, onFetch } = useABTesting();
  return (
    <SafeAreaView style={{ flex: 1 }}>
      <Box mt={5} flex={1} testID="ab-testing-screen">
        <Box
          maxW="80"
          rounded="lg"
          overflow="hidden"
          borderColor="coolGray.200"
          borderWidth="1"
...
